kubeflow/components/no-ssl/gateway.kubeflow-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    tls:
      httpsRedirect: false
  # - hosts:
  #   - "*"
  #   port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   tls:
  #     mode: SIMPLE
  #     privateKey: /etc/istio/ingressgateway-certs/tls.key
  #     serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
